# get-eda-resources

./: .gitignore  README.md  pyproject.toml
src/get_eda_resources/: __init__.py  cli.py
